[gd_scene load_steps=11 format=1]

[ext_resource path="res://script/LevelUp.gd" type="Script" id=1]
[ext_resource path="res://gfx/gui/popup-book.png" type="Texture" id=2]
[ext_resource path="res://font/PopupH1.tres" type="DynamicFont" id=3]
[ext_resource path="res://font/PopupH2.tres" type="DynamicFont" id=4]
[ext_resource path="res://font/PopupStrong.tres" type="DynamicFont" id=5]
[ext_resource path="res://script/FitWidthLabel.gd" type="Script" id=6]
[ext_resource path="res://ScoreLabel.tscn" type="PackedScene" id=7]

[sub_resource type="Animation" id=1]

length = 0.01
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Popup:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ Vector2( 640, -512 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Popup:transform/rot")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ -5.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Background:visibility/opacity")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=2]

length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Background:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Popup:transform/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 640, 470 ), Vector2( 640, 1370 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Popup:transform/rot")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}

[sub_resource type="Animation" id=3]

length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Popup:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 640, -512 ), Vector2( 640, 470 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Popup:transform/rot")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ -5.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Background:visibility/opacity")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[node name="LevelUp" type="Area2D"]

input/pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
monitorable = false
script/script = ExtResource( 1 )

[node name="Background" type="ColorFrame" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1280.0
margin/bottom = 960.0
color = Color( 0.0838623, 0.0888834, 0.09375, 0.501961 )

[node name="Popup" type="Node2D" parent="."]

transform/pos = Vector2( 640, 470 )

[node name="Book" type="Sprite" parent="Popup"]

transform/pos = Vector2( 10, 20 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="LevelLabel" type="Label" parent="Popup"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -277.0
margin/top = -293.0
margin/right = -38.0
margin/bottom = -233.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Chapter 2"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="BestWordTitleLabel" type="Label" parent="Popup"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -290.0
margin/top = -210.0
margin/right = -116.0
margin/bottom = -170.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Best word:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="BestWordLabel" type="Label" parent="Popup"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -290.0
margin/top = -170.0
margin/right = -10.0
margin/bottom = -130.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "AAAAAAAAAAA"
align = 1
valign = 1
clip_text = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script/script = ExtResource( 6 )
BaseFontSize = 32
MaxTextLength = 11

[node name="BestWordScoreLabel" parent="Popup" instance=ExtResource( 7 )]

rect/scale = Vector2( 0.75, 0.75 )
margin/left = -300.0
margin/top = -160.0
margin/right = 87.0
margin/bottom = -54.0
text = "1,000,000"
MaxTextLength = 9

[node name="LongestWordTitleLabel" type="Label" parent="Popup"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -290.0
margin/top = -90.0
margin/right = -68.0
margin/bottom = -50.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Longest word:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="LongestWordLabel" type="Label" parent="Popup"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -290.0
margin/top = -50.0
margin/right = -10.0
margin/bottom = -10.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "AAAAAAAAAAA"
align = 1
valign = 1
clip_text = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script/script = ExtResource( 6 )
BaseFontSize = 32
MaxTextLength = 11

[node name="LongestWordScoreLabel" parent="Popup" instance=ExtResource( 7 )]

rect/scale = Vector2( 0.75, 0.75 )
margin/left = -300.0
margin/right = 87.0
text = "15 letters"
script/script = null

[node name="TileStats" type="Node2D" parent="Popup"]

transform/pos = Vector2( -260, 70 )

[node name="LetterStats" type="Node2D" parent="Popup"]

transform/pos = Vector2( 80, -270 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/Default = SubResource( 1 )
anims/Hide = SubResource( 2 )
anims/Show = SubResource( 3 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[connection signal="finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_finished"]


